--- a/api/movement/models/movement.settings.json
+++ b/api/movement/models/movement.settings.json
@@ -18,7 +18,7 @@
       "type": "decimal"
     },
     "user": {
-      "plugin": "admin",
+      "plugin": "users-permissions",
       "model": "user"
     }
   }
