--- a/api/saving/models/saving.settings.json
+++ b/api/saving/models/saving.settings.json
@@ -18,7 +18,7 @@
       "type": "string"
     },
     "user": {
-      "plugin": "admin",
+      "plugin": "users-permissions",
       "model": "user"
     },
     "target": {
