--- a/api/movement/models/movement.settings.json
+++ b/api/movement/models/movement.settings.json
@@ -11,7 +11,7 @@
     "draftAndPublish": true
   },
   "attributes": {
-    "concept": {
+    "name": {
       "type": "string"
     },
     "amount": {
